--- a/frontend/binder.css
+++ b/frontend/binder.css
@@ -162,7 +162,7 @@ body.wiggle_binder #binder_launch_help {
     height: 24px;
     background-size: 24px 24px;
     cursor: pointer;
-    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/close-outline.svg);
+    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/close-outline.svg");
 }
 
 .download_div,
@@ -211,12 +211,12 @@ body.wiggle_binder #binder_launch_help {
     background-size: 1rem 1rem;
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/copy-outline.svg);
+    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/copy-outline.svg");
     box-shadow: 0px 0px 60px 60px white;
 }
 
 .download_icon {
-    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/download-outline.svg);
+    background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/download-outline.svg");
 }
 
 .copy_icon.success_copy::after {
