--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -1780,7 +1780,7 @@ pluto-helpbox {
     display: flex;
     flex-direction: column;
     width: calc(100vw - 50px - (700px + 25px + 6px)); /* compat */
-    width: calc(max(min(100vw - 50px - (700px + 25px + 6px), 450px), 300px));
+    width: clamp(300px, calc(100vw - 50px - (700px + 25px + 6px)), 450px);
     height: 70vh; /* compat */
     height: min(70vh, 900px);
     /* overflow: hidden; */
