--- a/frontend/juliamono.css
+++ b/frontend/juliamono.css
@@ -29,8 +29,9 @@
 }
 
 @font-face {
-    font-family: JuliaMono-RegularItalic;
+    font-family: JuliaMono;
     src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono@0.043/webfonts/JuliaMono-RegularItalic.woff2") format("woff2");
     font-display: swap;
     font-weight: 400;
+    font-style: italic, oblique;
 }
