--- a/frontend/juliamono.css
+++ b/frontend/juliamono.css
@@ -27,3 +27,11 @@
     font-display: swap;
     font-weight: 700;
 }
+
+@font-face {
+    font-family: JuliaMono;
+    src: url("https://cdn.jsdelivr.net/gh/cormullion/juliamono@0.043/webfonts/JuliaMono-RegularItalic.woff2") format("woff2");
+    font-display: swap;
+    font-weight: 400;
+    font-style: italic;
+}
