--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -276,7 +276,7 @@ pluto-output div.admonition {
 pluto-output div.admonition .admonition-title {
     font-family: "Vollkorn", sans-serif;
     font-feature-settings: "lnum", "pnum";
-    color: white;
+    color: var(--admonition-title-color);
     font-weight: 600;
     margin-block-end: 0px;
     padding-left: 0.3em;
@@ -555,7 +555,7 @@ nav#at_the_top > a {
 nav#at_the_top img {
     height: 39px;
     margin-bottom: -8px;
-    filter: invert(var(--invert-image-colors));
+    filter: invert(var(--invert-image-colors)) hue-rotate(180deg) contrast(0.85);
 }
 
 nav#at_the_top h1 {
@@ -729,6 +729,7 @@ nav#at_the_top > #process_status {
     padding: 5px 10px;
     margin: 5px;
     background: var(--nav-process-status-bg-color);
+    color: var(--nav-process-status-color);
     border-radius: 10px;
     z-index: 10;
     margin-left: 1em;
@@ -1085,6 +1086,7 @@ pluto-cell:focus-within > pluto-shoulder > button {
 
 pluto-shoulder > button > span::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/eye-outline.svg);
+    filter: invert(var(--invert-image-colors));
 }
 
 pluto-cell.code_folded > pluto-shoulder > button > span::after {
@@ -1208,10 +1210,10 @@ body:not(.___) pluto-cell.running > pluto-trafficlight::after {
 body:not(.___) pluto-cell.queued.errored > pluto-trafficlight::after {
     background: repeating-linear-gradient(
         -45deg,
-        var(--error-cell-color),
-        var(--error-cell-color) 8px,
+        var(--light-error-cell-color),
         var(--light-error-cell-color) 8px,
-        var(--light-error-cell-color) 16px
+        var(--bright-error-cell-color) 8px,
+        var(--bright-error-cell-color) 16px
     );
     background-clip: content-box;
     opacity: 0.99; /* [1] */
@@ -1221,10 +1223,10 @@ body:not(.___) pluto-cell.queued.errored > pluto-trafficlight::after {
 body:not(.___) pluto-cell.running.errored > pluto-trafficlight::after {
     background: repeating-linear-gradient(
         -45deg, 
-        var(--bright-error-cell-color), 
+        var(--light-error-cell-color), 
+        var(--light-error-cell-color) 8px, 
         var(--bright-error-cell-color) 8px, 
-        var(--error-cell-color) 8px, 
-        var(--error-cell-color) 16px
+        var(--bright-error-cell-color) 16px
     );
     background-clip: content-box;
     opacity: 0.99; /* [1] */
@@ -1251,7 +1253,7 @@ pluto-cell.drop_target pluto-input::after {
     left: 0;
     height: 100%;
     width: 100%;
-    color: black;
+    color: var(--drop-target-text-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1591,6 +1593,7 @@ pkg-popup {
     margin-top: calc(0.5 * (1rem - 80px));
     background: var(--pkg-popup-bg-color);
     border: 3px solid var(--pkg-popup-border-color);
+    color: var(--pkg-popup-color);
     border-radius: 10px;
     padding: 8px;
     overflow-wrap: break-word;
@@ -1627,6 +1630,11 @@ pkg-popup .pkg-buttons {
     display: inline-flex;
     height: 1em;
     flex-direction: row;
+}
+
+pkg-popup .pkg-buttons img {
+    filter: invert(var(--invert-image-colors));
+
 }
 
 pkg-popup .pkg-buttons > * {
@@ -1819,6 +1827,7 @@ pluto-helpbox {
     height: min(70vh, 900px);
     /* overflow: hidden; */
     background-color: var(--helpbox-bg-color);
+    color: var(--helpbox-text-color);
     /* border: 2px solid darkgray; */
     border-right: none;
     border-bottom: none;
@@ -2034,12 +2043,13 @@ nav#undo_delete {
     left: 0px;
     margin: 0.75rem;
     padding: 0.5rem;
-
+    
     font-family: "Roboto Mono", monospace;
     font-size: 0.75rem;
 
-    background: var(--undo-delete-color);
+    background-color: var(--undo-delete-bg-color);
     border-radius: 3px;
+    color: var(--undo-delete-color);
 
     box-shadow: 00px 00px 10px 2px var(--undo-delete-box-shadow-color);
     opacity: 1;
@@ -2280,7 +2290,7 @@ pluto-cell.code_differs .cm-editor .cm-gutters {
 .cm-completionIcon-c_Any::before,
 pluto-output > assignee,
 .cm-s-default span.cm-variable {
-    color: var(--cm-var-color);
+    color: var(--cm-var-color) !important;
     font-weight: 700;
 }
 
