--- a/frontend/treeview.css
+++ b/frontend/treeview.css
@@ -3,6 +3,7 @@
 @import url("https://cdn.jsdelivr.net/npm/@fontsource/roboto-mono@4.4.5/700.css");
 
 @import url("juliamono.css");
+@import url("colors.css");
 
 /*  */
 
@@ -12,7 +13,7 @@ pluto-tree-pair {
     font-size: 0.75rem;
 }
 pluto-tree {
-    color: hsl(0, 0%, 25%, 0.7);
+    color: var(--pluto-tree-color);
     white-space: pre;
     cursor: pointer;
 }
@@ -50,6 +51,7 @@ pluto-tree > pluto-tree-prefix::before {
     opacity: 0.5;
     cursor: pointer;
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/caret-down-outline.svg);
+    filter: invert(var(--invert-image-colors));
 }
 
 pluto-tree.collapsed pluto-tree > pluto-tree-prefix::before {
@@ -62,7 +64,7 @@ pluto-tree.collapsed > pluto-tree-prefix::before {
 
 pluto-tree p-r > p-v {
     display: inline-flex;
-    color: hsl(0, 0%, 25%, 1);
+    color: var(--pluto-output-color);
 }
 
 pluto-tree.collapsed pluto-tree-items.Array > p-r > p-k,
@@ -244,7 +246,7 @@ jlerror {
 }
 
 jlerror > header {
-    color: #330000;
+    color: var(--jlerror-header-color);
 }
 jlerror > header > p {
     margin-block-end: 0.2em;
@@ -253,17 +255,18 @@ jlerror > header > p:first-child {
     font-weight: bold;
 }
 jlerror > section > ol > li > mark {
-    background: #f3f2f1;
+    background: var(--jlerror-mark-bg-color);
     border-radius: 6px;
+    color: var(--jlerror-mark-color);
     font-family: JuliaMono, monospace;
     font-variant-ligatures: none;
 }
 jlerror > section > ol > li > em > a {
-    background: #f5efd9;
+    background: var(--jlerror-a-bg-color);
     border-radius: 4px;
     padding: 1px 7px;
     text-decoration: none;
-    border-left: 3px solid #9a7575;
+    border-left: 3px solid var(--jlerror-a-border-left-color);
 }
 jlerror > section > ol > li > span {
     opacity: 0.8;
@@ -280,15 +283,15 @@ table.pluto-table td {
 }
 
 table.pluto-table .schema-types {
-    color: rgba(0, 0, 0, 0.4);
+    color: var(--pluto-schema-types-color);
     font-family: "JuliaMono", monospace;
     font-size: 0.75rem;
     opacity: 0;
 }
 
 table.pluto-table .schema-types th {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    background-color: white;
+    border-bottom: 1px solid var(--pluto-schema-types-border-color);
+    background-color: var(--main-bg-color);
     height: 2rem;
 }
 
@@ -308,7 +311,7 @@ table.pluto-table .schema-types th:first-child {
 
 table.pluto-table .schema-names th,
 table.pluto-table .schema-types th:first-child {
-    background-color: white;
+    background-color: var(--main-bg-color);
     position: sticky;
     top: calc(0.25rem - var(--pluto-cell-spacing));
     height: 2rem;
@@ -320,7 +323,7 @@ table.pluto-table thead:hover .schema-names th {
 }
 
 table.pluto-table tbody th:first-child {
-    background-color: white;
+    background-color: var(--main-bg-color);
     position: sticky;
     left: -10px; /* padding-left of pluto-output*/
 }
