--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2365,6 +2365,7 @@ pluto-cell.hooked_up pluto-input .cm-editor {
     border-color: var(--pluto-cell-force-color);
     border-width: 2px;
     border-left: none;
+    border-top: none;
 }
 
 pluto-cell.hooked_up > pluto-runarea {
@@ -2380,5 +2381,6 @@ pluto-cell.hooked_up pluto-output {
     border-right: solid 2px;
     border-top: solid 2px;
     border-top-right-radius: 4px;
+    border-bottom: solid 2px;
     border-color: var(--pluto-cell-force-color);
 }
