--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2202,7 +2202,7 @@ pluto-input .cm-editor .cm-content {
     background: hsla(46, 90%, 98%, 1);
     color: #41323f;
 }
-.cm-editor.cm-focused {
+.cm-editor.cm-focused:not(.__) {
     outline: unset;
 }
 
