--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -292,7 +292,7 @@ pluto-output div.admonition {
 pluto-output div.admonition .admonition-title {
     background: rgb(158, 200, 137);
     margin: -1px; /* Fixes a rendering glitch in Chrome */
-    margin-left: -.55rem;
+    margin-left: -0.55rem;
 }
 pluto-output div.admonition.note,
 pluto-output div.admonition.info,
@@ -790,19 +790,43 @@ body.binder.loading #binder_spinners {
     box-sizing: border-box;
 }
 
+body.recording_waiting_to_start #outline-frame {
+    border: 12px solid #be6f6fba;
+}
 body.recording #outline-frame {
     border: 12px solid #dc3535ba;
 }
 
-div#stop-record-container {
+body.recording_waiting_to_start header,
+body.recording header {
+    display: none;
+}
+
+#record-ui-container {
     position: fixed;
     top: 3px;
     z-index: 9999;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#record-ui-container > .overlay-button {
     /* background: pink; */
     border-color: #e86f6c;
+    margin: 0 3px;
 }
-div#stop-record-container span.stop-recording-icon::after {
+#record-ui-container > .overlay-button.record-no-audio {
+    border-color: #dcc6c6;
+}
+#record-ui-container span.stop-recording-icon::after {
     background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/stop-circle-outline.svg);
+}
+#record-ui-container span.microphone-icon::after {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/mic-outline.svg);
+}
+#record-ui-container span.mute-icon::after {
+    background-image: url(https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/mic-off-outline.svg);
 }
 
 div.recording-playback {
@@ -865,9 +889,7 @@ main > preamble #saveall-container.saved > span {
     opacity: 0.5;
 }
 
-span.stop-recording-icon::after,
-main > preamble span.saved-icon::after,
-main > preamble span.saving-icon::after {
+.overlay-button span.pluto-icon::after {
     content: "";
     display: inline-block;
     padding-right: 20px;
@@ -881,7 +903,7 @@ main > preamble span.saving-icon::after {
     background-position-y: 1px;
 }
 
-main > preamble span.saved-icon::after {
+.overlay-button span.saved-icon::after {
     background-image: url("https://cdn.jsdelivr.net/gh/ionic-team/ionicons@5.5.1/src/svg/checkmark-outline.svg");
 }
 
