--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -797,8 +797,8 @@ body.is_recording #outline-frame {
     border: 12px solid #dc3535ba;
 }
 
-body.recording_waiting_to_start header,
-body.is_recording header {
+body.recording_waiting_to_start > header,
+body.is_recording > header {
     display: none;
 }
 
