--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -2271,6 +2271,8 @@ pluto-cell.code_differs .cm-editor .cm-gutters {
 }
 
 .cm-completionIcon-c_String::before,
+.cm-completionIcon-completion_path::before,
+.cm-completionIcon-completion_dict::before,
 .cm-s-default span.cm-string {
     color: #da5616;
 }
